fix: unit tests